# android-tv-date-time

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  README.md  README_EN.md  RELEASE_NOTES.md  android_time_fixer.py  build.py  build.yml  build_script.py  generate_imports.py  locales.py  pyinstaller.spec  pyproject.toml  requirements.txt  start.bat  start.ps1
.github/workflows/: build.yml  pyproject.toml  update-dependencies.yml
.tests/: conftest.py  test_android_time_fixer.py
hooks/: linux_hook.py  macos_hook.py  win_hook.py
scripts/: generate_icon.py
scripts/hooks/: base_hook.py  linux_hook.py  macos_hook.py  win_hook.py
src/: android_time_fixer.py
