[tool.poetry]
name = "androidtvtimefixer"
version = "1.0.0"
description = "Time fixer for Android TV"
authors = ["Orientalium"]
readme = "README.md"
packages = [
    {include = "src/android_time_fixer.py"},
    {include = "locales.py"}
]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
adb-shell = {extras = ["network"], version = "^0.4.4"}
pyperclip = "^1.11.0"
colorama = "^0.4.6"
platformdirs = "^4.5.1"
packaging = "^26.0"
typing-extensions = "^4.15.0"
cryptography = "^46.0.3"
rsa = "^4.9.1"
ntplib = "^0.4.0"

# Общая зависимость для всех платформ
psutil = "^7.2.1"
wmi = { version = "^1.5.1", markers = "sys_platform == 'win32'" }

# macOS-специфичные зависимости
pyobjc-framework-Cocoa = { version = "^11.1", markers = "sys_platform == 'darwin'" }

# Общие зависимости
click = "^8.3.1"
rich = "^14.3.1"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
